--- a/style.css
+++ b/style.css
@@ -25,24 +25,28 @@ header {
     color: orangered;
     margin-left: 10px;
     margin-top: 10px;
+    font-weight: 600;
  }
 .btn1{
     color: orangered;
     background-color: transparent;
     border: transparent;
     margin-left: 180px;
+    font-weight: 600;
 }
 .btn2{
     color: orangered;
     background-color: transparent;
     border: transparent;
     margin-left: 25px;
+    font-weight: 600;
 }
 .btn3{
     color: orangered;
     background-color: transparent;
     border: transparent;
     margin-left: 25px;
+    font-weight: 600;
 }
 
 .img{
@@ -78,6 +82,7 @@ header {
    margin-left: 33px;
    color: orangered; 
    background-color: transparent;
+   font-weight: 600;
  }
 .four{
    margin-top: 10px; 
@@ -109,6 +114,7 @@ header {
    color: orangered; 
    margin-left: 42%; 
    margin-top: -8%;
+   font-weight: 600;
  }
 .six{
    background-color: transparent; 
@@ -126,6 +132,7 @@ header {
     border-radius: 20px;    
     border-width: 10px;
     border-color: transparent;
+    font-weight: 600;
  }
 .rt{
    background-color: #fcfcdc; 
@@ -242,6 +249,7 @@ header {
    font-size: 9px;
    height: 25px;
    width: 143px;
+   font-weight: 600;
 }
 .button2{
    margin-left: 1%;
@@ -253,6 +261,7 @@ header {
    font-size: 9px;
    height: 25px;
    width: 165px;
+   font-weight: 600;
 }
 .lin4{
    background-color: transparent;
